fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ input[type=text]{
   width: 60%;
   text-align: center;
   padding:20px;
-  border-bottom:solid 3px #ffcd36;
+  border:solid 3px #ffcd36;
 }
 
 input[type=text]:focus,
@@ -164,7 +164,7 @@ button:focus{
 .row1,
 .row2{
   flex: 1 0 auto;
-  display:flex;
+  display: flex;
 }
 
 .row3{
@@ -187,7 +187,7 @@ button:focus{
 
 .squareOne,
 .squareThree{
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -199,7 +199,7 @@ button:focus{
 }
 
 .squareTwo p:first-child{
-  display:flex;
+  display: flex;
   justify-content: center;
   font-size:6rem;
   font-weight: 800;
@@ -210,7 +210,7 @@ button:focus{
 }
 
 .squareFour{
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -261,7 +261,7 @@ footer{
 
   .row1,
   .row2{
-    display:block;
+    display: block;
   }
 }
 
